crates/solidity/testing/snapshots/bindings_output/errors/revert_shadowing/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:2:35]
    │
  2 │ ╭─▶     function testBuiltIn() public pure {
    ┆ ┆   
 11 │ ├─▶     function customRevert(string memory) internal pure {}
    │ │                                                               
    │ ╰─────────────────────────────────────────────────────────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function testBuiltIn() public pure {
   │              ─────┬─────  
   │                   ╰─────── name: 2
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭─▶ contract Test {
  2 │ │       function testBuiltIn() public pure {
    │ │   ────────────────┬────────────────  
    │ │                   ╰────────────────── definiens: 2
    ┆ ┆   
 12 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
────╯
